--- a/newproject/templates/garage/car_list.html
+++ b/newproject/templates/garage/car_list.html
@@ -6,7 +6,7 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <style>
         body {
-            background-image: url(https://wallpapers.com/images/hd/wood-grain-background-1920-x-1045-g50atmfe1pz1r6wz.jpg);
+            background-image: url(https://i.ytimg.com/vi/hAquHBCPjpA/maxresdefault.jpg);
             box-shadow: inset 0 0 10px #e2dfdf;
         }
     </style>
@@ -17,15 +17,15 @@
 
 <body>
 
-    <div class="container" style="background-color: #8d8585; border-radius: 30px; padding: 20px; margin-top: 20px;">
-        <div class="jumbotron text-center" style="background-color: #266b2e; border-radius: 30px; color: white;">
+    <div class="container" style="background-color: #8d8585; border-radius: 30px; padding: 20px; margin-top: 20px; opacity: 0.9;">
+        <div class="jumbotron text-center" style="background-color: #6b2049ff; border-radius: 30px; color: white;">
             <h1 class="display-4">Car List</h1>
 
         </div>
         {% if cars %}
         {% for i in cars %}
-        <div class="card" style="background-color: #266b2e; border-radius: 30px; color: white; ">
-            <div class="card-header bg-success" style="border-radius: 30px 30px 0 0;">
+        <div class="card" style="background-color: #acacacff; border-radius: 30px; color: white; opacity: 1.0; font-size: 1.2em; font-weight: bold;">
+            <div class="card-header" style= "background-color: #6b2049ff; border-radius: 30px 30px 0 0;">
                 <h5 class="card-title">{{i.year}} {{i.make}} {{i.model}}</h5>
             </div>
             <div class="card-body">
@@ -37,9 +37,9 @@
                 <p class="card-text">Fuel Type: {{i.fuel_type}}</p>
 
                 <br>
-                <p class="text-muted" style=" color:white">by: {{i.post_author}}</p>
+                
             </div>
-            <div class="card-footer text-muted" style=" color:white">
+            <div class="card-footer text-muted" style=" color: white; font-weight: bold;">
                 {{i.post_created}}
             </div>
         </div>
