--- a/newproject/templates/garage/car_list.html
+++ b/newproject/templates/garage/car_list.html
@@ -9,6 +9,13 @@
             background-image: url(https://i.ytimg.com/vi/hAquHBCPjpA/maxresdefault.jpg);
             box-shadow: inset 0 0 10px #e2dfdf;
         }
+        .hoverbutton:hover {
+            background-color: #8d8585;
+            color: #6b2049ff;
+            cursor: pointer;
+            transform: scale(1.1);
+            transition: all 0.3s ease;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +25,7 @@
 <body>
 
     <div class="container" style="background-color: #8d8585; border-radius: 30px; padding: 20px; margin-top: 20px; opacity: 0.9;">
-        <div class="jumbotron text-center" style="background-color: #6b2049ff; border-radius: 30px; color: white;">
+        <div class="jumbotron text-center" style="background-color: #6b2049ff; border-radius: 30px; color: white; font-weight: bold;">
             <h1 class="display-4">Car List</h1>
 
         </div>
@@ -37,7 +44,8 @@
                 <p class="card-text">Fuel Type: {{i.fuel_type}}</p>
 
                 <br>
-                
+                <button class="hoverbutton" style="background-color: #6b2049ff; color: white; border: none; border-radius: 30px; padding: 5px 10px;">Edit</button>
+                <button class="hoverbutton" style="background-color: #6b2049ff; color: white; border: none; border-radius: 30px; padding: 5px 10px;">Delete</button>
             </div>
             <div class="card-footer text-muted" style=" color: white; font-weight: bold;">
                 {{i.post_created}}
