--- a/newproject/templates/postdetail.html
+++ b/newproject/templates/postdetail.html
@@ -1,32 +1,29 @@
 {% extends "master.html" %}
-{% block content %}
 
+{% block content %}
     <div class="container" style="background-color: #8d8585; border-radius: 30px; padding: 20px; margin-top: 20px;">
         <div class="jumbotron text-center" style="background-color: #266b2e; border-radius: 30px; color: white;">
-            <h1 class="display-4">latest posts</h1>
+            <h1 class="display-4">Post Details</h1>
 
         </div>
         {% if post %}
-        {% for i in post %}
         <div class="card" style="background-color: #266b2e; border-radius: 30px; color: white; ">
             <div class="card-header bg-success" style="border-radius: 30px 30px 0 0;">
-                <h5 class="card-title">{{i.post_title}}</h5>
+                <h5 class="card-title">{{ post.post_title }}</h5>
             </div>
             <div class="card-body">
 
-                <p class="card-text">{{i.post_body}}</p>
+                <p class="card-text">{{ post.post_body }}</p>
                 <br>
-                <p class="text-muted" style=" color:white">by: {{i.post_author}}</p>
+                <p class="text-muted" style=" color:white">by: {{ post.post_author }}</p>
             </div>
             <div class="card-footer text-muted" style=" color:white">
-                {{i.post_created}}
+                {{ post.post_created }}
             </div>
         </div>
         <hr>
-        {% endfor %}
         {% else %}
         <p style=" color:white">No posts available.</p>
         {% endif %}
     </div>
-
 {% endblock %}
