--- a/newproject/templates/postdetail.html
+++ b/newproject/templates/postdetail.html
@@ -25,5 +25,7 @@
         {% else %}
         <p style=" color:white">No posts available.</p>
         {% endif %}
+        <a href="{% url 'updatepost' post.id %}" class="btn btn-warning btn-lg" role="button" aria-pressed="true">Edit</a>|
+        <a href="{% url 'deletepost' post.id %}" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Delete</a>
     </div>
 {% endblock %}
