--- a/newproject/templates/post_list.html
+++ b/newproject/templates/post_list.html
@@ -4,6 +4,7 @@
     <div class="container" style="background-color: #8d8585; border-radius: 30px; padding: 20px; margin-top: 20px;">
         <div class="jumbotron text-center" style="background-color: #266b2e; border-radius: 30px; color: white;">
             <h1 class="display-4">latest posts</h1>
+            <a href = "{% url 'add_post' %}" class = "btn btn-primary btn-lg" role="button" aria-pressed="true">Add New Post</a>
 
         </div>
         {% if post %}
@@ -20,6 +21,8 @@
             </div>
             <div class="card-footer text-muted" style=" color:white">
                 {{i.post_created}}
+                <a href = "{% url 'updatepost' i.id %}" class = "btn btn-info">Edit</a>
+                <a href = "{% url 'deletepost' i.id %}" class = "btn btn-danger">Delete</a>
             </div>
         </div>
         <hr>
